============================================================================
SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.0.4 - not yet released
* devices
   - Zander: PZAN1 contains QNH altitude
   - Zander: verify checksum
* user interface
   - prevent potential crash while using flarm radar dialogs
   - improve behaviour if "circling zoom" is disabled
* Android
  - device: support NMEA over Bluetooth RFCOMM

Version 6.0.3 - 2011/02/02
* devices
  - EW, Volkslogger: restart I/O thread after declaration failure
  - CAI302: check for I/O errors during declaration
  - Volkslogger: enable task declaration
  - Condor: fixed wind direction processing
* user interface
  - Language: translation updates
  - Auto zoom: don't disable in circling mode
  - more airspace rendering fixes for Android
* map
  - Terrain: load more raster tiles on modern devices (second try)
* Android
  - keep display backlight on, don't suspend
  - support extra large displays (tablets)
  - allow task switching
  - disallow multiple instances of XCSoar
  - show notification icon while running
  - implement "Quit" properly
  - enable cruise/climb mode switching
  - use the external SD card on Samsung Galaxy
  - show on-screen keyboard buttons
  - fix profile breakage
  - show flarm and thermal assistant gauge
  - show text in splash screen

Version 6.0.2 - 2011/01/20
* devices
  - more robust NMEA checksum parser
  - CAI302: restart I/O thread after declaration failure
  - CAI302: parse PCAID baro altitude if "!w" unavailable
  - Condor: read wind from LXWP0
* user interface
  - Language: translation updates
  - Language: add Spanish translation
  - Language: add Russian translation
  - Language: translations Czech, Greek, Croatian, Italian, Serbian,
    Swedish imported from LK8000
  - Window: disable sunken window edges on HP31x
  - Target: adjust map layout
* map